--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+body {
+  background-color: #888;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+}
+
 .card-section {
   font-family: 'Press Start 2P', cursive;
   display: flex;
@@ -8,7 +17,7 @@
 }
 
 .card-title {
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-align: center;
 }
 
@@ -16,13 +25,67 @@
   border-radius: 12px;
   filter: drop-shadow(15px 15px 4px #333);
   border: 1px solid black;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .fetched {
   margin-top: 2.5rem;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .card-link {
   color: #333333;
+}
+
+.new-card {
+  font-family: 'Press Start 2P', cursive;
+  border: none;
+  overflow: visible;
+  background: transparent;
+  cursor: pointer;
+  text-align: center;
+  line-height: 3rem;
+  border-radius: 8px;
+  padding: 1rem;
+  font-size: 2rem;
+  width: 30%;
+  align-self: center;
+  color: white;
+  background-image: linear-gradient(
+    45deg,
+    #845ec2,
+    #d65db1,
+    #ff6f91,
+    #ff9671,
+    #ffc75f,
+    #f9f871
+  );
+  background-size: 300%;
+  background-position: left;
+  transition: background-position 1s;
+  box-shadow: 2px 6px 8px 0 rgba(73, 34, 34, 0.35),
+    2px 6px 12px 0 rgba(0, 0, 0, 0.4);
+}
+
+.new-card:hover,
+.new-card:focus {
+  background-position: right;
+  text-decoration: none;
+  outline: 0;
+}
+
+.error {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 2rem;
+}
+
+.loading {
+  font-family: 'Press Start 2P', cursive;
+  color: white;
+  font-weight: bold;
+  position: absolute;
+  bottom: 0;
+  left: 100;
 }
