FIX: Responsiveness on the refresh button

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ body {
   border-radius: 8px;
   padding: 1rem;
   font-size: 2rem;
-  width: 30%;
+  max-width: 50%;
   align-self: center;
   color: white;
   background-image: linear-gradient(
